# procon2024-algo

./: .gitignore  README.md  requirements.txt
board/: make_formal_cut.py
data/: formal_cuts.json  test.json
example/: formal_cut.py
py/: requirements.txt  server.py  test_fillone.ipynb  visualizer.py
py/alphazero/: board.py  config.py  dataloader.py  masks.py  mcts.py  model.py
py/board/: best_model.pth  board.py  dataloader.py  fillone_minimal.py  fillone_plot.ipynb  fillone_plot.py  formal_cut.pickle  make_formal_cut.py  make_test.py  model_incp.py  model_resnet.py  nohup.out  test_board.py  train_resnet.py  train_resnet_copy.py
py/tests/: board_operate.py  rowup.py  test_board.py
py/utils/: load_formal_cut.py  load_formal_cuts.py
rs/: Cargo.toml
rs-visualizer/: package-lock.json  package.json
rs-visualizer/src/: App.css  App.tsx  Board.css  Board.tsx  main.tsx  type.ts
rs-visualizer/src-tauri/: Cargo.toml  submit.json  tauri.conf.json
rs-visualizer/src-tauri/src/: main.rs
rs/rs-visualizer/: bun.lockb
rs/rs-visualizer/src/: App.css  App.tsx
rs/rs-visualizer/src-tauri/: Cargo.toml  tauri.conf.json
rs/src/: client.rs  lib.rs  main.rs  utils.rs
rs/src/board/: action.rs  board.rs  cut.rs  mod.rs
rs/src/board/board/: base_impl.rs  fillone_impl.rs  mod.rs  operate_impl.rs  score_impl.rs  swap_impl.rs
rs/src/search/: beam.rs  down_fillone.rs  down_fillone_montecarlo.rs  fillone_greedy.rs  fillone_montecarlo.rs  game.rs  greedy.rs  mod.rs  state.rs
rs/tests/: lib.rs  test_board.rs  test_search.rs  test_utils.rs
utils/: formal_cut.py
(+3 files in other folders)
