[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
ahash = "0.8"
reqwest = "0.12.8"
tokio = { version = "1.0", features = ["full"] }
tokio-macros = { version = "2.4.0" }
